refactor/footgrid 'match-setup' endpoint and update db schema
